--- a/index.html
+++ b/index.html
@@ -26,12 +26,29 @@
           </li>
         </ul>
       </nav>
-      <a href="" class="menu-btn">
+      <a href="#side-drawer" class="menu-btn">
         <span></span>
         <span></span>
         <span></span>
       </a>
     </header>
+    <aside id="side-drawer"> 
+      <header>    
+         <a href="#" class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
+    </header>
+      <ul>
+        <li>
+          <a href="">Browse Meals</a>
+        </li>
+        <li>
+          <a href="">My Orders</a>
+        </li>
+      </ul>
+    </aside>
     <main>
       <h1>Browse Our Delicious Meals</h1>
       <section id="latest-products">
@@ -57,5 +74,6 @@
         </ul>
       </section>
     </main>
+
   </body>
 </html>
